# wechat-sdk-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/wxcloudrun_flask/: Dockerfile  requirements.txt
tests/: test_api.py  test_login_api.py
tests/cloudrun/: test_api_pay.py  test_config.py
wechat_login_sdk/: __init__.py  access_token.py  api.py  exceptions.py  userinfo.py
wechat_sdk/cloudrun/: config.py  settings.toml
wechat_sdk/cloudrun/api/: pay.py
wechat_sdk/login/: __init__.py  api.py  exception.py  model.py
wechat_sdk/pay/: __init__.py  base.py  order.py  sign.py
wechat_sdk/pay/base/: client.py  sign.py
wechatpay_sdk/: __init__.py  base.py  order.py  pay.py  sign.py  utils.py
wechatpay_sdk/base/: client.py  sign.py  utils.py
