[build-system]
requires = ["setuptools>=61", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-sdk-py"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
version = "0.1.0-alpha.2"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3'
dependencies = [
    "dynaconf",
    "cryptography",
    "requests",
]

[project.optional-dependencies]
# 测试依赖
test = [
    "responses"
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"